# nbsp-python

./: .gitignore  CMakeLists.txt  README-PTBR.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: conda.yml  enscripten.yaml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
example/: tkinter-example.py
include/: NBioAPI.h  NBioAPI_Error.h  NBioAPI_ImgConv.h  NBioAPI_ImgConvISO.h  NBioAPI_Type.h
src/: main.cpp
src/nbsp_python/: __init__.py
tests/: test_basic.py  tkinter-example.py
